--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -3,6 +3,7 @@
     margin-top: 6.2rem;
     height: 30rem;
     background: 10% 30%;
+    z-index: 10;
 }
 .writingBorder{
     background-color: black;
@@ -21,6 +22,7 @@
     margin-bottom: 0rem;
     font-weight: bold;
     opacity: 1;
+    z-index: 25;
 }
 .secondBorder{
     background-color: black;
@@ -36,6 +38,7 @@
     margin-bottom: 0%;
     text-align: center;
     color: white;
+    z-index: 60;
 }
 .bannerStyle{
     height: 4rem;
